@@ -1,16 +1,15 @@
 package com.spreedly.client;
 
-import com.google.gson.Gson;
 import com.spreedly.client.models.BankAccountInfo;
-import com.spreedly.client.models.results.BankAccountResult;
 import com.spreedly.client.models.CreditCardInfo;
-import com.spreedly.client.models.results.CreditCardResult;
-import com.spreedly.client.models.transactions.PaymentMethodFinal;
-import com.spreedly.client.models.results.PaymentMethodResult;
-import com.spreedly.client.models.transactions.Recache;
-import com.spreedly.client.models.results.SpreedlyError;
 import com.spreedly.client.models.SpreedlySecureOpaqueString;
+import com.spreedly.client.models.results.BankAccountResult;
+import com.spreedly.client.models.results.CreditCardResult;
+import com.spreedly.client.models.results.PaymentMethodResult;
+import com.spreedly.client.models.results.SpreedlyError;
 import com.spreedly.client.models.results.TransactionResult;
+import com.spreedly.client.models.transactions.PaymentMethodFinal;
+import com.spreedly.client.models.transactions.Recache;
 
 import org.apache.http.HttpResponse;
 import org.apache.http.client.methods.HttpPost;
@@ -18,14 +17,16 @@ import org.apache.http.entity.StringEntity;
 import org.apache.http.impl.nio.client.CloseableHttpAsyncClient;
 import org.apache.http.impl.nio.client.HttpAsyncClients;
 import org.apache.http.util.EntityUtils;
+import org.json.JSONObject;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Base64;
 import java.util.Date;
 import java.util.Map;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
+
+import javax.xml.bind.DatatypeConverter;
 
 import io.reactivex.rxjava3.core.Single;
 
@@ -34,10 +35,11 @@ public class SpreedlyClientImpl implements SpreedlyClient {
     private final CloseableHttpAsyncClient httpClient;
     private final String baseUrl = "https://core.spreedly.com/v1";
 
-    public SpreedlyClientImpl(String user, String password){
-        this.credentials = "Basic " + Base64.getEncoder().encodeToString((user + ":" + password).getBytes());
+    public SpreedlyClientImpl(String user, String password) {
+        this.credentials = "Basic " + DatatypeConverter.printBase64Binary((user + ":" + password).getBytes());
         this.httpClient = HttpAsyncClients.createDefault();
     }
+
     @Override
     public SpreedlySecureOpaqueString createString() {
         return null;
@@ -47,10 +49,9 @@ public class SpreedlyClientImpl implements SpreedlyClient {
     public Single<TransactionResult<PaymentMethodResult>> createCreditCardPaymentMethod(CreditCardInfo info) {
         return Single.fromCallable(() -> {
             PaymentMethodFinal paymentMethod = new PaymentMethodFinal(info);
-            Gson gson = new Gson();
-            String requestBody = gson.toJson(paymentMethod);
+            String requestBody = new JSONObject(paymentMethod).toString();
             String url = "/payment_methods.json";
-            Map<String, Object> transactionResult = sendRequest(requestBody, url);
+            JSONObject transactionResult = sendRequest(requestBody, url);
             TransactionResult<PaymentMethodResult> finalResults = processCCMap(transactionResult);
             return finalResults;
         });
@@ -60,10 +61,9 @@ public class SpreedlyClientImpl implements SpreedlyClient {
     public Single<TransactionResult<PaymentMethodResult>> createBankPaymentMethod(BankAccountInfo info) {
         return Single.fromCallable(() -> {
             PaymentMethodFinal paymentMethod = new PaymentMethodFinal(info);
-            Gson gson = new Gson();
-            String requestBody = gson.toJson(paymentMethod);
+            String requestBody = new JSONObject(paymentMethod).toString();
             String url = "/payment_methods.json";
-            Map<String, Object> transactionResult = sendRequest(requestBody, url);
+            JSONObject transactionResult = sendRequest(requestBody, url);
             TransactionResult<PaymentMethodResult> finalResults = processBAMap(transactionResult);
             return finalResults;
         });
@@ -73,10 +73,9 @@ public class SpreedlyClientImpl implements SpreedlyClient {
     public Single<TransactionResult<PaymentMethodResult>> recache(String token, SpreedlySecureOpaqueString cvv) {
         return Single.fromCallable(() -> {
             Recache recache = new Recache(cvv);
-            Gson gson = new Gson();
-            String requestBody = gson.toJson(recache);
+            String requestBody = new JSONObject(recache).toString();
             String url = "/payment_methods/" + token + "/recache.json";
-            Map<String, Object> transactionResult = sendRequest(requestBody, url);
+            JSONObject transactionResult = sendRequest(requestBody, url);
             TransactionResult<PaymentMethodResult> finalResults = processCCMap(transactionResult);
             return finalResults;
         });
@@ -88,33 +87,33 @@ public class SpreedlyClientImpl implements SpreedlyClient {
     }
 
 
-    TransactionResult<PaymentMethodResult> processCCMap(Map<String, Object> raw) {
+    TransactionResult<PaymentMethodResult> processCCMap(JSONObject raw) {
         TransactionResult<PaymentMethodResult> transactionResult = null;
-        Map<String, Object> rawTransaction = (Map<String, Object>) raw.get("transaction");
+        JSONObject rawTransaction = raw.getJSONObject("transaction");
         if (rawTransaction == null) {
             return processErrors(raw);
         }
-        Map<String, Object> rawResult = (Map<String, Object>) rawTransaction.get("payment_method");
+        JSONObject rawResult = rawTransaction.getJSONObject("payment_method");
         CreditCardResult result = null;
         if (rawResult != null) {
             result = new CreditCardResult(
-                    (String) rawResult.getOrDefault("token", ""),
-                    (String) rawResult.getOrDefault("storage_state", ""),
-                    (boolean) rawResult.getOrDefault("test", true),
-                    (String) rawResult.getOrDefault("payment_method_type", ""),
-                    (ArrayList) rawResult.getOrDefault("errors", null),
+                    rawResult.optString("token"),
+                    rawResult.optString("storage_state"),
+                    rawResult.optBoolean("test", true),
+                    (String) rawResult.get("payment_method_type"),
+                    (ArrayList) rawResult.get("errors"),
                                         /*                (Date) ((String) rawTransaction.get("created_at")),
                 (Date) rawTransaction.get("updated_at"),*/
                     new Date(),
                     new Date(),
                     // TODO parse dates
-                    (String) rawResult.getOrDefault("email", ""),
-                    (String) rawResult.getOrDefault("last_four_digits", ""),
-                    (String) rawResult.getOrDefault("first_six_digits", ""),
-                    (String) rawResult.getOrDefault("verification_value", ""),
-                    (String) rawResult.getOrDefault("number", ""),
-                    rawResult.getOrDefault("month", "").toString(),
-                    rawResult.getOrDefault("year", "").toString()
+                    (String) rawResult.get("email"),
+                    (String) rawResult.get("last_four_digits"),
+                    (String) rawResult.get("first_six_digits"),
+                    (String) rawResult.get("verification_value"),
+                    (String) rawResult.get("number"),
+                    rawResult.get("month").toString(),
+                    rawResult.get("year").toString()
             );
         }
         transactionResult = new TransactionResult<PaymentMethodResult>(
@@ -124,18 +123,18 @@ public class SpreedlyClientImpl implements SpreedlyClient {
                 // Todo: parse dates
                 new Date(),
                 new Date(),
-                (boolean) rawTransaction.getOrDefault("succeeded", false),
-                (String) rawTransaction.getOrDefault("transaction_type", ""),
-                (boolean) rawTransaction.getOrDefault("retained", false),
-                (String) rawTransaction.getOrDefault("state", ""),
-                (String) rawTransaction.getOrDefault("messageKey", ""),
-                (String) rawTransaction.getOrDefault("message", ""),
+                (boolean) rawTransaction.get("succeeded"),
+                (String) rawTransaction.get("transaction_type"),
+                (boolean) rawTransaction.get("retained"),
+                (String) rawTransaction.get("state"),
+                (String) rawTransaction.get("messageKey"),
+                (String) rawTransaction.get("message"),
                 result
         );
         return transactionResult;
     }
 
-    TransactionResult<PaymentMethodResult> processBAMap(Map<String, Object> raw){
+    TransactionResult<PaymentMethodResult> processBAMap(JSONObject raw) {
         TransactionResult<PaymentMethodResult> transactionResult = null;
         Map<String, Object> rawTransaction = (Map<String, Object>) raw.get("transaction");
         if (rawTransaction == null) {
@@ -145,27 +144,27 @@ public class SpreedlyClientImpl implements SpreedlyClient {
         BankAccountResult result = null;
         if (rawResult != null) {
             result = new BankAccountResult(
-                    (String) rawResult.getOrDefault("token", ""),
-                    (String) rawResult.getOrDefault("storage_state", ""),
-                    (boolean) rawResult.getOrDefault("test", true),
-                    (String) rawResult.getOrDefault("payment_method_type", ""),
+                    (String) rawResult.get("token"),
+                    (String) rawResult.get("storage_state"),
+                    (boolean) rawResult.get("test"),
+                    (String) rawResult.get("payment_method_type"),
                     /*                (Date) ((String) rawTransaction.get("created_at")),
                 (Date) rawTransaction.get("updated_at"),*/
                     new Date(),
                     new Date(),
                     // TODO parse dates
-                    (String) rawResult.getOrDefault("email", ""),
-                    (ArrayList) rawResult.getOrDefault("errors", null),
-                    (String) rawResult.getOrDefault("bank_name", ""),
-                    (String) rawResult.getOrDefault("account_type", ""),
-                    (String) rawResult.getOrDefault("account_holder_type", ""),
-                    (String) rawResult.getOrDefault("routing_number_display_digits", ""),
-                    (String) rawResult.getOrDefault("account_number_display_digits", ""),
-                    (String) rawResult.getOrDefault("routing_number", ""),
-                    (String) rawResult.getOrDefault("account_number", ""),
-                    (String) rawResult.getOrDefault("first_name", ""),
-                    (String) rawResult.getOrDefault("last_name", ""),
-                    (String) rawResult.getOrDefault("full_name", "")
+                    (String) rawResult.get("email"),
+                    (ArrayList) rawResult.get("errors"),
+                    (String) rawResult.get("bank_name"),
+                    (String) rawResult.get("account_type"),
+                    (String) rawResult.get("account_holder_type"),
+                    (String) rawResult.get("routing_number_display_digits"),
+                    (String) rawResult.get("account_number_display_digits"),
+                    (String) rawResult.get("routing_number"),
+                    (String) rawResult.get("account_number"),
+                    (String) rawResult.get("first_name"),
+                    (String) rawResult.get("last_name"),
+                    (String) rawResult.get("full_name")
             );
         }
         transactionResult = new TransactionResult<PaymentMethodResult>(
@@ -175,18 +174,18 @@ public class SpreedlyClientImpl implements SpreedlyClient {
                 new Date(),
                 new Date(),
                 // TODO parse dates
-                (boolean) rawTransaction.getOrDefault("succeeded", false),
-                (String) rawTransaction.getOrDefault("transaction_type", ""),
-                (boolean) rawTransaction.getOrDefault("retained", false),
-                (String) rawTransaction.getOrDefault("state", ""),
-                (String) rawTransaction.getOrDefault("messageKey", ""),
-                (String) rawTransaction.getOrDefault("message", ""),
+                (boolean) rawTransaction.get("succeeded"),
+                (String) rawTransaction.get("transaction_type"),
+                (boolean) rawTransaction.get("retained"),
+                (String) rawTransaction.get("state"),
+                (String) rawTransaction.get("messageKey"),
+                (String) rawTransaction.get("message"),
                 result
         );
         return transactionResult;
     }
 
-    private Map sendRequest(String requestBody, String url) throws IOException, ExecutionException, InterruptedException {
+    private JSONObject sendRequest(String requestBody, String url) throws IOException, ExecutionException, InterruptedException {
         httpClient.start();
         HttpPost request = new HttpPost(baseUrl + url);
         request.setEntity(new StringEntity(requestBody));
@@ -196,17 +195,17 @@ public class SpreedlyClientImpl implements SpreedlyClient {
         HttpResponse response = future.get();
         int statusCode = response.getStatusLine().getStatusCode();
         String responseBody = EntityUtils.toString(response.getEntity());
-        Gson responseGson = new Gson();
-        return responseGson.fromJson(responseBody, Map.class);
+        return new JSONObject(requestBody);
 
     }
-    private TransactionResult<PaymentMethodResult> processErrors(Map<String, Object> raw){
+
+    private TransactionResult<PaymentMethodResult> processErrors(JSONObject raw) {
         ArrayList<Map<String, String>> errors = (ArrayList) raw.get("errors");
         ArrayList<SpreedlyError> spreedlyErrors = new ArrayList<SpreedlyError>();
         for (Map<String, String> error :
                 errors
         ) {
-            spreedlyErrors.add(new SpreedlyError(error.getOrDefault("attribute", ""), error.getOrDefault("key", ""), error.getOrDefault("message", "")));
+            spreedlyErrors.add(new SpreedlyError(error.get("attribute"), error.get("key"), error.get("message")));
         }
         TransactionResult<PaymentMethodResult> result = new TransactionResult<PaymentMethodResult>(spreedlyErrors);
         return result;
